force-app/main/default/objects/InsurancePolicyCoverage/fields/Agent_Comission__c.field-meta.xml
<CustomField>
    <fullName>Agent_Comission__c</fullName>
    <label>Agent Comission</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>