force-app/main/default/objects/InsurancePolicyCoverage/fields/Agent_Comission_Section_2__c.field-meta.xml
<CustomField>
    <fullName>Agent_Comission_Section_2__c</fullName>
    <label>Agent Comission Section 2</label>
    <precision>12</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>