force-app/main/default/objects/InsurancePolicyCoverage/fields/amount_insured__c.field-meta.xml
<CustomField>
    <fullName>amount_insured__c</fullName>
    <label>amount insured</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>