force-app/main/default/objects/InsurancePolicyCoverage/fields/Banks_Fee__c.field-meta.xml
<CustomField>
    <fullName>Banks_Fee__c</fullName>
    <label>Banks Fee</label>
    <precision>12</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>