force-app/main/default/objects/InsurancePolicyCoverage/fields/Banks_Fee_Comission__c.field-meta.xml
<CustomField>
    <fullName>Banks_Fee_Comission__c</fullName>
    <label>Banks Fee Comission</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>