force-app/main/default/objects/InsurancePolicyCoverage/fields/Banks_Fee_Section_2__c.field-meta.xml
<CustomField>
    <fullName>Banks_Fee_Section_2__c</fullName>
    <label>Banks Fee Section 2</label>
    <precision>12</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>