force-app/main/default/objects/InsurancePolicyCoverage/fields/Banks_Fee_Section_3__c.field-meta.xml
<CustomField>
    <fullName>Banks_Fee_Section_3__c</fullName>
    <label>Banks Fee Section 3</label>
    <precision>12</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>