force-app/main/default/objects/InsurancePolicyCoverage/fields/Broker_Comission__c.field-meta.xml
<CustomField>
    <fullName>Broker_Comission__c</fullName>
    <label>Broker Comission</label>
    <precision>12</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>