force-app/main/default/objects/InsurancePolicyCoverage/fields/Broker_Comission_Section_3__c.field-meta.xml
<CustomField>
    <fullName>Broker_Comission_Section_3__c</fullName>
    <label>Broker Comission Section 3</label>
    <precision>12</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>