force-app/main/default/objects/InsurancePolicyCoverage/fields/Claim_Loss_Amount__c.field-meta.xml
<CustomField>
    <fullName>Claim_Loss_Amount__c</fullName>
    <label>Claim Loss Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>