force-app/main/default/objects/InsurancePolicyCoverage/fields/Claim_Options__c.field-meta.xml
<CustomField>
    <fullName>Claim_Options__c</fullName>
    <label>Claim Options</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
                <label>SI:SUM INSURED</label>
            </value>
            <value>
                <fullName>LL</fullName>
                <label>LL:LOSS LIMIT</label>
            </value>
            <value>
                <fullName>FL</fullName>
                <label>FL: FIRST LOSS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>