force-app/main/default/objects/InsurancePolicyCoverage/fields/Claim_UR_Id__c.field-meta.xml
<CustomField>
    <fullName>Claim_UR_Id__c</fullName>
    <label>Claim UR Id</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currency_Code</valueSetName>
    </valueSet>
</CustomField>