force-app/main/default/objects/InsurancePolicyCoverage/fields/Commision_Type__c.field-meta.xml
<CustomField>
    <fullName>Commision_Type__c</fullName>
    <label>Commision Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>