force-app/main/default/objects/InsurancePolicyCoverage/fields/Commission_Blank__c.field-meta.xml
<CustomField>
    <fullName>Commission_Blank__c</fullName>
    <formula>ISBLANK(Commision__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission Blank</label>
    <type>Checkbox</type>
</CustomField>