force-app/main/default/objects/InsurancePolicyCoverage/fields/cov_tahun_id__c.field-meta.xml
<CustomField>
    <fullName>cov_tahun_id__c</fullName>
    <label>cov tahun id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>