force-app/main/default/objects/InsurancePolicyCoverage/fields/Coverage_Id__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Id__c</fullName>
    <label>Coverage Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>