force-app/main/default/objects/InsurancePolicyCoverage/fields/Coverage_Name__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coverage Name</label>
    <referenceTo>Master_Data__c</referenceTo>
    <relationshipLabel>Insurance Policy Coverages (Coverage Name)</relationshipLabel>
    <relationshipName>Insurance_Policy_Coverages1</relationshipName>
    <type>Lookup</type>
</CustomField>