force-app/main/default/objects/InsurancePolicyCoverage/fields/Deductible__c.field-meta.xml
<CustomField>
    <fullName>Deductible__c</fullName>
    <label>Deductible Flag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Total Sum Insured</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Claim Paid</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Claim Amount</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Recoverable Claim</label>
            </value>
            <value>
                <fullName>6</fullName>
                <isActive>false</isActive>
                <label>Claim Dibayar</label>
            </value>
            <value>
                <fullName>2</fullName>
                <isActive>false</isActive>
                <label>Harga Pertanggungan</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>