force-app/main/default/objects/InsurancePolicyCoverage/fields/Deductible_Amount_Section_2__c.field-meta.xml
<CustomField>
    <fullName>Deductible_Amount_Section_2__c</fullName>
    <label>Deductible Amount Section 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>