force-app/main/default/objects/InsurancePolicyCoverage/fields/Deductible_Currency__c.field-meta.xml
<CustomField>
    <fullName>Deductible_Currency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deductible Currency</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Master_Data__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Exchange Rate</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Master_Data__c</referenceTo>
    <relationshipLabel>Insurance Policy Coverages (Master Data)</relationshipLabel>
    <relationshipName>Insurance_Policy_Coverages</relationshipName>
    <type>Lookup</type>
</CustomField>