force-app/main/default/objects/InsurancePolicyCoverage/fields/Deductible_Currency_LU__c.field-meta.xml
<CustomField>
    <fullName>Deductible_Currency_LU__c</fullName>
    <formula>Deductible_Currency__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deductible Currency</label>
    <type>Text</type>
</CustomField>