force-app/main/default/objects/InsurancePolicyCoverage/fields/Deductible_PCT__c.field-meta.xml
<CustomField>
    <fullName>Deductible_PCT__c</fullName>
    <label>Deductible PCT</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>