force-app/main/default/objects/InsurancePolicyCoverage/fields/Deductible_PCT_Section_3__c.field-meta.xml
<CustomField>
    <fullName>Deductible_PCT_Section_3__c</fullName>
    <label>Deductible PCT Section 3</label>
    <precision>12</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>