force-app/main/default/objects/InsurancePolicyCoverage/fields/Deductible_Section_3__c.field-meta.xml
<CustomField>
    <fullName>Deductible_Section_3__c</fullName>
    <label>Deductible Flag Section 3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Deductible</valueSetName>
    </valueSet>
</CustomField>