force-app/main/default/objects/InsurancePolicyCoverage/fields/Deductible_Type_Section_3__c.field-meta.xml
<CustomField>
    <fullName>Deductible_Type_Section_3__c</fullName>
    <label>Deductible Type Section 3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flat</fullName>
            </value>
            <value>
                <fullName>Percentage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>