force-app/main/default/objects/InsurancePolicyCoverage/fields/Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Discount_Amount__c</fullName>
    <formula>IF(
    NOT(ISBLANK(Final_Approved_Premi_Amount__c)),
    (Final_Approved_Premi_Amount__c * Discount__c) / 100,
    IF(
        NOT(ISBLANK(Fixed_Premi_Amount__c)),
        (Fixed_Premi_Amount__c * Discount__c) / 100,
        IF(
            NOT(ISBLANK(Premi_Amount__c)),
            (Premi_Amount__c * Discount__c) / 100,
            0
        )
    )
)</formula>
    <label>Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>