force-app/main/default/objects/InsurancePolicyCoverage/fields/Final_Approved_Premi_Amount_Section_4__c.field-meta.xml
<CustomField>
    <fullName>Final_Approved_Premi_Amount_Section_4__c</fullName>
    <label>Final Approved Premi Amount Section 4</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>