force-app/main/default/objects/InsurancePolicyCoverage/fields/Final_Approved_Rate__c.field-meta.xml
<CustomField>
    <fullName>Final_Approved_Rate__c</fullName>
    <label>Final Approved Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>