force-app/main/default/objects/InsurancePolicyCoverage/fields/Finance_Commision_PCT__c.field-meta.xml
<CustomField>
    <fullName>Finance_Commision_PCT__c</fullName>
    <label>Finance Commision</label>
    <precision>12</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>