force-app/main/default/objects/InsurancePolicyCoverage/fields/Fix_Proposed_Rate__c.field-meta.xml
<CustomField>
    <fullName>Fix_Proposed_Rate__c</fullName>
    <label>Fix Proposed Rate</label>
    <precision>12</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>