force-app/main/default/objects/InsurancePolicyCoverage/fields/General_RPremium_PCT__c.field-meta.xml
<CustomField>
    <fullName>General_RPremium_PCT__c</fullName>
    <label>General RPremium PCT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>