force-app/main/default/objects/InsurancePolicyCoverage/fields/General_RPremium_PCT_Section_3__c.field-meta.xml
<CustomField>
    <fullName>General_RPremium_PCT_Section_3__c</fullName>
    <label>Lintaswata Comission Section 3</label>
    <precision>12</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>