force-app/main/default/objects/InsurancePolicyCoverage/fields/Indemnity_Type__c.field-meta.xml
<CustomField>
    <fullName>Indemnity_Type__c</fullName>
    <label>Indemnity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
                <label>Sum Insured</label>
            </value>
            <value>
                <fullName>LL</fullName>
                <label>Loss Limit</label>
            </value>
            <value>
                <fullName>FL</fullName>
                <label>First Loss</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>