force-app/main/default/objects/InsurancePolicyCoverage/fields/Leasing_Fee__c.field-meta.xml
<CustomField>
    <fullName>Leasing_Fee__c</fullName>
    <label>Leasing&apos;s Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>