force-app/main/default/objects/InsurancePolicyCoverage/fields/Lintaswata_Deductible__c.field-meta.xml
<CustomField>
    <fullName>Lintaswata_Deductible__c</fullName>
    <label>Lintaswata Deductible</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Deductible</valueSetName>
    </valueSet>
</CustomField>