force-app/main/default/objects/InsurancePolicyCoverage/fields/Lintaswata_Deductible_PCT__c.field-meta.xml
<CustomField>
    <fullName>Lintaswata_Deductible_PCT__c</fullName>
    <label>Lintaswata Deductible PCT</label>
    <precision>12</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>