force-app/main/default/objects/InsurancePolicyCoverage/fields/Lintaswata_Discount__c.field-meta.xml
<CustomField>
    <fullName>Lintaswata_Discount__c</fullName>
    <label>Lintaswata Discount</label>
    <precision>12</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>