force-app/main/default/objects/InsurancePolicyCoverage/fields/Lintaswata_Finance_Commision__c.field-meta.xml
<CustomField>
    <fullName>Lintaswata_Finance_Commision__c</fullName>
    <label>Lintaswata Finance Commision</label>
    <precision>12</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>