force-app/main/default/objects/InsurancePolicyCoverage/fields/Lintaswata_Minimum_Cur_ID__c.field-meta.xml
<CustomField>
    <fullName>Lintaswata_Minimum_Cur_ID__c</fullName>
    <label>Lintaswata Minimum Cur ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>