force-app/main/default/objects/InsurancePolicyCoverage/fields/Lintaswata_Overdng_Comission__c.field-meta.xml
<CustomField>
    <fullName>Lintaswata_Overdng_Comission__c</fullName>
    <label>Lintaswata Overiding Comission</label>
    <precision>12</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>