force-app/main/default/objects/InsurancePolicyCoverage/fields/Lintaswata_Proposed_Rate__c.field-meta.xml
<CustomField>
    <fullName>Lintaswata_Proposed_Rate__c</fullName>
    <label>Lintaswata Proposed Rate</label>
    <precision>12</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>