force-app/main/default/objects/InsurancePolicyCoverage/fields/Master_Data__c.field-meta.xml
<CustomField>
    <fullName>Master_Data__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deductible Currency Section 4</label>
    <referenceTo>Master_Data__c</referenceTo>
    <relationshipLabel>Insurance Policy Coverages (Deductible Currency Section 4)</relationshipLabel>
    <relationshipName>Insurance_Policy_Coverages4</relationshipName>
    <type>Lookup</type>
</CustomField>