force-app/main/default/objects/InsurancePolicyCoverage/fields/max_person__c.field-meta.xml
<CustomField>
    <fullName>max_person__c</fullName>
    <label>max person</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>