force-app/main/default/objects/InsurancePolicyCoverage/fields/max_person_section_3__c.field-meta.xml
<CustomField>
    <fullName>max_person_section_3__c</fullName>
    <label>max person section 3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>