force-app/main/default/objects/InsurancePolicyCoverage/fields/Minimum_Amount__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Amount__c</fullName>
    <label>Minimum Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>