force-app/main/default/objects/InsurancePolicyCoverage/fields/Minimum_Amount_Section_4__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Amount_Section_4__c</fullName>
    <label>Minimum Amount Section 4</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>