force-app/main/default/objects/InsurancePolicyCoverage/fields/Minimum_Cur_ID__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Cur_ID__c</fullName>
    <label>Minimum Cur ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>