force-app/main/default/objects/InsurancePolicyCoverage/fields/Minimum_Cur_ID_Section_2__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Cur_ID_Section_2__c</fullName>
    <label>Minimum Cur ID Section 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>