force-app/main/default/objects/InsurancePolicyCoverage/fields/Not_Use_For_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Not_Use_For_Reporting__c</fullName>
    <formula>NOT(ISNULL(Coverage_Name__r.Asset_Category_ID__c)  || ISBLANK(Coverage_Name__r.Asset_Category_ID__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Not Use For Reporting</label>
    <type>Checkbox</type>
</CustomField>