force-app/main/default/objects/InsurancePolicyCoverage/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Insurance Policy Coverages</relationshipLabel>
    <relationshipName>Insurance_Policy_Coverages</relationshipName>
    <type>Lookup</type>
</CustomField>