force-app/main/default/objects/InsurancePolicyCoverage/fields/Overdng_Comission__c.field-meta.xml
<CustomField>
    <fullName>Overdng_Comission__c</fullName>
    <label>Overiding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>