force-app/main/default/objects/InsurancePolicyCoverage/fields/Overdng_Comission_Section_2__c.field-meta.xml
<CustomField>
    <fullName>Overdng_Comission_Section_2__c</fullName>
    <label>Overdng Comission Section 2</label>
    <precision>12</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>