force-app/main/default/objects/InsurancePolicyCoverage/fields/Overdng_Comission_Section_4__c.field-meta.xml
<CustomField>
    <fullName>Overdng_Comission_Section_4__c</fullName>
    <label>Overdng Comission Section 4</label>
    <precision>12</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>