force-app/main/default/objects/InsurancePolicyCoverage/fields/Premi_Amount__c.field-meta.xml
<CustomField>
    <fullName>Premi_Amount__c</fullName>
    <label>Premi Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>