force-app/main/default/objects/InsurancePolicyCoverage/fields/Premi_Amount_Section_2__c.field-meta.xml
<CustomField>
    <fullName>Premi_Amount_Section_2__c</fullName>
    <label>Premi Amount Section 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>