force-app/main/default/objects/InsurancePolicyCoverage/fields/Premi_Blank__c.field-meta.xml
<CustomField>
    <fullName>Premi_Blank__c</fullName>
    <formula>ISBLANK(Premi_Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Premi Blank</label>
    <type>Checkbox</type>
</CustomField>