force-app/main/default/objects/InsurancePolicyCoverage/fields/Propose_Rate__c.field-meta.xml
<CustomField>
    <fullName>Propose_Rate__c</fullName>
    <label>Standard Bottom rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>