force-app/main/default/objects/InsurancePolicyCoverage/fields/Proposed_Fixed_Amount_Section_4__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Fixed_Amount_Section_4__c</fullName>
    <label>Proposed Rate Section 4</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>