force-app/main/default/objects/InsurancePolicyCoverage/fields/Risk_Closing_Fee_BSP_Amount__c.field-meta.xml
<CustomField>
    <fullName>Risk_Closing_Fee_BSP_Amount__c</fullName>
    <formula>(Risk_Closing_Survey_Fee_BSP__c / 100)* Premi_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Risk/Closing Survey Fee / BSP Amount</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>