force-app/main/default/objects/InsurancePolicyCoverage/fields/Risk_Closing_Survey_Fee_BSP__c.field-meta.xml
<CustomField>
    <fullName>Risk_Closing_Survey_Fee_BSP__c</fullName>
    <label>Risk/Closing Survey Fee / BSP</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>