force-app/main/default/objects/InsurancePolicyCoverage/fields/Risk_ID__c.field-meta.xml
<CustomField>
    <fullName>Risk_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Risk</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Insurance Policy Coverages</relationshipLabel>
    <relationshipName>Insurance_Policy_Coverages</relationshipName>
    <type>Lookup</type>
</CustomField>