force-app/main/default/objects/InsurancePolicyCoverage/fields/Selected_Coverages_ID__c.field-meta.xml
<CustomField>
    <fullName>Selected_Coverages_ID__c</fullName>
    <label>Selected Coverages ID</label>
    <type>TextArea</type>
</CustomField>