force-app/main/default/objects/InsurancePolicyCoverage/fields/Self_Insurance_Participation__c.field-meta.xml
<CustomField>
    <fullName>Self_Insurance_Participation__c</fullName>
    <label>Self-Insurance Participation %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>