force-app/main/default/objects/InsurancePolicyCoverage/fields/Self_Insured_Flag__c.field-meta.xml
<CustomField>
    <fullName>Self_Insured_Flag__c</fullName>
    <label>Self Insured Flag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Total Sum Insured</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Harga Pertanggungan</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Claim Paid</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Claim Amount</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Recoverable Claim</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Claim DiBayar</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>