force-app/main/default/objects/InsurancePolicyCoverage/fields/UniqueId__c.field-meta.xml
<CustomField>
    <fullName>UniqueId__c</fullName>
    <formula>Opportunity__r.Busreq_ID__c + Coverage_Name__r.COVERAGE_REF_ID__c+  Risk_ID__r.Risk_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UniqueId</label>
    <type>Text</type>
</CustomField>